# artifacts/api-server/src/routes/index.ts
@@ -4,11 +4,13 @@ import usersRouter from "./users";
 import projectsRouter from "./projects";
 import collaboratorsRouter from "./collaborators";
 import suggestionsRouter from "./suggestions";
+import publishingRouter from "./publishing";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(usersRouter);
+router.use(publishingRouter);
 router.use(projectsRouter);
 router.use(collaboratorsRouter);
 router.use(suggestionsRouter);
